
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int is_lossless; } ;
typedef TYPE_1__ WebPHeaderStructure ;
struct TYPE_6__ {scalar_t__ use_threads; } ;
typedef TYPE_2__ WebPDecoderOptions ;


 int MIN_WIDTH_FOR_THREADS ;
 int assert (int) ;

int VP8GetThreadMethod(const WebPDecoderOptions* const options,
                       const WebPHeaderStructure* const headers,
                       int width, int height) {
  if (options == ((void*)0) || options->use_threads == 0) {
    return 0;
  }
  (void)headers;
  (void)width;
  (void)height;
  assert(headers == ((void*)0) || !headers->is_lossless);



  return 0;
}
